--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ meta_description: "Kasper Mini ― minimalistic jekyll theme"
 markdown: kramdown
 highlighter: pygments
 paginate: 10
-baseurl: /
+baseurl: '/'
 domain_name: 'http://kasper-mini.chugunkov.website'
 #google_analytics: 'UA-70000000-0'
 sass:
